Changed default startup reset offset from largest to smallest.
A new command line option -ol can be used to change the behavior back to largest.